# hotel-booking

./: .gitignore  BUILD.md  CMakeLists.txt  README  README.md  SConstruct
aux/: README
hotel-booking/: .gitignore  Address.h  Booking.h  Hotel.h  Makefile  User.h  client.c  config.h  messages.h  server.c  utils.h  xp_getpass.h  xp_sem.h
hotel-booking/tests/: test1_lin.sh
src/: Booking.h  Doxyfile  User.h  client.c  config.h  server.c  xp_getpass.h  xp_sem.h
